--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - dev
   release:
     types:
       - created
@@ -33,9 +33,11 @@ jobs:
           docker buildx inspect --bootstrap
           curl -sSL https://gist.githubusercontent.com/ArturKlauser/0f0293c62f5626df0261ac994d8a46af/raw/33ef25b8a93f15310f0a4013deca3f8d20fc00a7/check-qemu-binfmt.sh | bash
       - name: log in github registry
-        run: docker login --username "${{ github.actor }}" --password "${{ secrets.GITHUB_TOKEN }}" docker.pkg.github.com
+        run: docker login --username "${{ github.actor }}" --password "${{ secrets.GHCR_TOKEN }}" docker.pkg.github.com
       - name: build multiarch images
-        run: docker buildx build -t docker.pkg.github.com/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]'):$(echo ${{ github.ref }} | tr / -) --platform linux/amd64,linux/arm64,linux/arm/v7 .
+        run: docker buildx build -t ghcr.io/tinyzimmer/glauth:latest --platform linux/amd64,linux/arm64,linux/arm/v7 .
+#         run: docker buildx build -t ghcr.io/tinyzimmer/glauth:latest --platform linux/amd64,linux/arm64,linux/arm/v7 .
       - name: push multiarch images
-        if: github.event.release.tag_name
-        run: docker buildx build --push -t docker.pkg.github.com/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]'):${{ github.event.release.tag_name }} --platform linux/amd64,linux/arm64,linux/arm/v7 .
+#         if: github.event.release.tag_name
+        run: docker buildx build --push -t ghcr.io/tinyzimmer/glauth:latest --platform linux/amd64,linux/arm64,linux/arm/v7 .
+#         run: docker buildx build --push -t ghcr.io/tinyzimmer/glauth:${{ github.event.release.tag_name }} --platform linux/amd64,linux/arm64,linux/arm/v7 .
